cmake_minimum_required(VERSION 3.1)

project(sudoku_detection)

## Compile as C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

## Compile with the highest warning level
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

## System dependencies
find_package(OpenCV REQUIRED)

## Declare a C++ executable
add_executable(sudoku_detection src/sudoku_detection.cpp)

## Specify libraries to link a library or executable target against
target_link_libraries(sudoku_detection ${OpenCV_LIBS})
